--- a/demo-app/index.html
+++ b/demo-app/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Big City - Responsive HTML CSS Template</title>
+    <title>DC Demo App v1.0</title>
 <!--
 
 Template 2088 Big City
@@ -47,7 +47,7 @@ http://www.tooplate.com/view/2088-big-city
                 <div class="container">
                     <nav class="navbar">
                         <div class="tm-navbar-bg">                            
-                            <a class="navbar-brand text-uppercase" href="#">Deloitte Cloud</a>
+                            <a class="navbar-brand text-uppercase" href="#">Deloitte OpenCloud</a>
                             <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#tmNavbar">
                                 &#9776;
                             </button>
@@ -83,7 +83,7 @@ http://www.tooplate.com/view/2088-big-city
                                     <div class="tm-home-container-outer">
                                         <div class="tm-home-container">
                                             <div class="tm-home-title-container">
-                                                <h2 class="tm-text-title text-xs-center tm-home-title">Welcome to Deloitte Cloud!</h2>    
+                                                <h2 class="tm-text-title text-xs-center tm-home-title">Welcome to Deloitte OpenCloud!</h2>    
                                             </div>
                                             <div class="tm-home-description-container tm-bg-dark-blue">
                                                 <div class="text-xs-left tm-textbox">                                            
