added code for app1 and app2

--- a/demo-app-2/index.html
+++ b/demo-app-2/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>DC Demo App v1.0</title>
+    <title>DC Demo App</title>
 <!--
 
 Template 2088 Big City
@@ -87,7 +87,6 @@ http://www.tooplate.com/view/2088-big-city
                                             </div>
                                             <div class="tm-home-description-container tm-bg-dark-blue">
                                                 <div class="text-xs-left tm-textbox">                                            
-                                                    <p class="tm-text tm-home-description">Big City HTML CSS Template is provided by Tooplate website. Feel free to use this layout for your web projects. Please tell your friends about Tooplate. Thank you. Video BG credit: <a href="https://youtu.be/OeBdM7tykUg" target="_blank">Bangkok Sunset</a></p>
                                                     <p class="tm-text tm-home-description">Quisque mattis pellentesque diam eu vestibulum. Pellentesque augue urna, ultrices sit amet luctus eget, ultricies sit amet ipsum. Nulla sem nisi, commodo sed auctor sed, euismod nec dui. Morbi vitae enim id massa sodales tincidunt a et mi.</p>
                                                 </div>
                                             </div>    
