--- a/demo-app-1/index.html
+++ b/demo-app-1/index.html
@@ -69,7 +69,7 @@ http://www.tooplate.com/view/2085-neuron
           <div class="row">
 
                <div class="col-md-12 col-sm-12">
-                    <h1>Hello! This is Deloitte OpenCloud.</h1>
+                    <h1>Welcome to Deloitte OpenCloud ! </h1>
                     <h4></h4>
                     <a href="#blog" class="smoothScroll btn btn-default">Discover More</a>
                </div>
