--- a/demo-app-2/index.html
+++ b/demo-app-2/index.html
@@ -47,7 +47,7 @@ http://www.tooplate.com/view/2088-big-city
                 <div class="container">
                     <nav class="navbar">
                         <div class="tm-navbar-bg">                            
-                            <a class="navbar-brand text-uppercase" href="#">Deloitte </a>
+                            <a class="navbar-brand text-uppercase" href="#">Deloitte OpenCloud </a>
                             <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#tmNavbar">
                                 &#9776;
                             </button>
@@ -83,7 +83,7 @@ http://www.tooplate.com/view/2088-big-city
                                     <div class="tm-home-container-outer">
                                         <div class="tm-home-container">
                                             <div class="tm-home-title-container">
-                                                <h2 class="tm-text-title text-xs-center tm-home-title">Welcome to FL !</h2>    
+                                                <h2 class="tm-text-title text-xs-center tm-home-title">Welcome to NY !</h2>    
                                             </div>
                                             <div class="tm-home-description-container tm-bg-dark-blue">
                                                 <div class="text-xs-left tm-textbox">                                            
