--- a/demo-app-2/index.html
+++ b/demo-app-2/index.html
@@ -51,7 +51,7 @@ http://www.tooplate.com/view/2088-big-city
                 <div class="container">
                     <nav class="navbar">
                         <div class="tm-navbar-bg">                            
-                            <a class="navbar-brand text-uppercase" href="#">Deloitte OpenCloud </a>
+                            <a class="navbar-brand text-uppercase" href="#">Deloitte  </a>
                             <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#tmNavbar">
                                 &#9776;
                             </button>
