--- a/demo-app-2/index.html
+++ b/demo-app-2/index.html
@@ -88,7 +88,7 @@ http://www.tooplate.com/view/2088-big-city
                                     <div class="tm-home-container-outer">
                                         <div class="tm-home-container">
                                             <div class="tm-home-title-container">
-                                                <h2 class="tm-text-title text-xs-center tm-home-title">Welcome to NYC !</h2>    
+                                                <h2 class="tm-text-title text-xs-center tm-home-title">Welcome to FLORIDA !</h2>    
                                             </div>
                                             <div class="tm-home-description-container tm-bg-dark-blue">
                                                 <div class="text-xs-left tm-textbox">                                            
